--- a/mvr.cabal
+++ b/mvr.cabal
@@ -15,8 +15,10 @@ cabal-version:       >=1.10
 
 executable mvr
   main-is:             Main.hs
-  build-depends:       base >=4.7 && <4.8,
-                       hakyll >= 4.6
+  build-depends:       base >=4.7 && <4.8
+                     , containers >= 0.5.5.1
+                     , hakyll >= 4.6
+                     , pandoc >= 1.13.1
 
 
   default-language:    Haskell2010
