--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-_cache
-_site
-dist
-cabal-dev
-*.o
 *.hi
-*.chi
-*.chs.h
-.virtualenv
-.hpc
+*.o
+*.swp
+*.tag
+*~
+*_flymake.hs
 .hsenv
-.cabal-sandbox/
+.stack-work/
+/.cabal-sandbox/
+TAGS
+cabal-dev/
 cabal.sandbox.config
-cabal.config
+dist/
+tags
+/_release/
+.vagrant/
+*.imports
+/.idea/
+/*.iml
+/src/highlight.js
+/src/style.css
+/_site/
+/.dir-locals.el
+/_cache/
